polish ui and add card flips
co-authored-by: Michael Reiersgaard <michael.reiersgaard@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Cat Generator</title>
+  <title>Cats with Drinking Problems</title>
 </head>
 
 <body>
@@ -22,18 +22,7 @@
   </div>
   <div class="container">
     <div class="row cat-container mt-3">
-      <div class="card" style="width: 18rem;">
-        <span id="image1"></span>
-        <div class="card-body">
-          <h5 class="card-title" id="cat-name"></h5>
-          <p class="card-text" id="cat-fact"></p>
-        </div>
-        <ul class="list-group list-group-flush">
-          <li class="list-group-item" id="drink-1"></li>
-          <li class="list-group-item" id="stat-1"></li>
-          <li class="list-group-item" id="stat-2"></li>
-        </ul>
-      </div>
+
     </div>
   </div>
 
