--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
       <form class="form-inline">
         <div class="form-group m-2">
           <label for="numCats" class="mr-2"><strong>Number of Cats:</strong></label>
-          <input class="form-control" type="number" name="numCats" id="numCats">
+          <input size="2" maxlength="2" class="form-control" type="number" name="numCats" id="numCats">
         </div>
         <button type="submit" class="btn get-button m-2">Generate New Cats!</button>
       </form>
